--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -13,4 +13,6 @@ python-dotenv>=1.0.0
 trafilatura>=7.0.0
 lxml>=4.9.0
 tldextract>=5.1.0
-google-search-results>=2.4.0 
+google-search-results>=2.4.0
+matplotlib>=3.7.0
+reportlab>=4.0.0 
