--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ python-dotenv>=1.0.0
 weasyprint>=60.0.0
 streamlit>=1.28.0
 openai>=1.0.0
-matplotlib
-PyMuPDF
-pytesseract
-Pillow>=3.7.0
+matplotlib>=3.7.0
+pymupdf>=1.23.0
+pytesseract>=0.3.10
+pillow>=10.0.0
+reportlab>=4.0.0
